--- a/ildrio/src/main/resources/templates/layout/affan-layout/fragments/affanLayoutHeaderMenu.html
+++ b/ildrio/src/main/resources/templates/layout/affan-layout/fragments/affanLayoutHeaderMenu.html
@@ -1,7 +1,7 @@
 <th:block th:fragment="AdminLayoutHeaderMenu">
 	<div class="app-header__logo">
 		<div class="logo-src" style="" >
-			<span th:text="${#strings.toUpperCase(ssMap.ssCompanyNo)}" style="position:relative;top:-10px;font-size: 17pt; font-weight: bold;color:#fff;"></span>
+			<span th:text="${#strings.toUpperCase(ssMap.ssCompanyId)}" style="position:relative;top:-10px;font-size: 17pt; font-weight: bold;color:#fff;"></span>
 		</div>
 		<div class="header__pane ms-auto">
 			<div>
