--- a/ildrio/src/main/resources/templates/layout/affan-layout/fragments/affanLayoutScript.html
+++ b/ildrio/src/main/resources/templates/layout/affan-layout/fragments/affanLayoutScript.html
@@ -97,7 +97,7 @@
 		
 
 		function fn_login_check() {
-			//if("[[${ssMap.ssCompanyNo}]]" == ""){
+			//if("[[${ssMap.ssCompanyId}]]" == ""){
 			//	window.location.href="/admin/adminLogin";
 			//}	
 
