--- a/ildrio/src/main/resources/templates/layout/fragments/CommonScript.html
+++ b/ildrio/src/main/resources/templates/layout/fragments/CommonScript.html
@@ -74,7 +74,7 @@
 			}
 
 			sfn_header_count();
-			sfn_common_shopInfo('[[${ssMap.ssCompanyNo}]]');
+			sfn_common_shopInfo('[[${ssMap.ssCompanyId}]]');
 
 			sfn_ul_header_menu();
 			sfn_shopOpmkUser_list();
