--- a/ildrio/src/main/resources/templates/pages/back/customer/customerInfo/customerInfoReg.html
+++ b/ildrio/src/main/resources/templates/pages/back/customer/customerInfo/customerInfoReg.html
@@ -36,21 +36,21 @@
     		</div>   
     		<div clase="card-body" style="padding: 20px;">   
       		<div class="mb-3 row">   
-                	<label for="customerNo" class="col-sm-2 col-form-label text-end"> 거래처번호</label>   
+                	<label for="memberId" class="col-sm-2 col-form-label text-end"> 거래처번호</label>   
             		<div class="col-sm-10">   
-                    <input type="text"  name="customerNo" id="customerNo" th:value="${rsModel.customerNo}"  class="form-control"   maxlength="80"> 
+                    <input type="text"  name="memberId" id="memberId" th:value="${rsModel.memberId}"  class="form-control"   maxlength="80"> 
             		</div>   
       		</div>   
       		<div class="mb-3 row">   
-                	<label for="companyNo" class="col-sm-2 col-form-label text-end"> 회사번호</label>   
+                	<label for="companyId" class="col-sm-2 col-form-label text-end"> 회사번호</label>   
             		<div class="col-sm-10">   
-                    <input type="text"  name="companyNo" id="companyNo" th:value="${rsModel.companyNo}"  class="form-control"   maxlength="80"> 
+                    <input type="text"  name="companyId" id="companyId" th:value="${rsModel.companyId}"  class="form-control"   maxlength="80"> 
             		</div>   
       		</div>   
       		<div class="mb-3 row">   
-                	<label for="customerId" class="col-sm-2 col-form-label text-end"> 거래처아이디</label>   
+                	<label for="memberId" class="col-sm-2 col-form-label text-end"> 거래처아이디</label>   
             		<div class="col-sm-10">   
-                    <input type="text"  name="customerId" id="customerId" th:value="${rsModel.customerId}"  class="form-control"   maxlength="200"> 
+                    <input type="text"  name="memberId" id="memberId" th:value="${rsModel.memberId}"  class="form-control"   maxlength="200"> 
             		</div>   
       		</div>   
       		<div class="mb-3 row">   
