--- a/ildrio/src/main/resources/templates/pages/back/job/jobInfo/jobInfoList.html
+++ b/ildrio/src/main/resources/templates/pages/back/job/jobInfo/jobInfoList.html
@@ -48,13 +48,13 @@
 				<div class="col-sm-3 col-md-3">
 					<div class="input-group">
 						<label for="" class="col-form-label text-end" style="width: 100px; white-space: nowrap; margin-right: 10px;">거래처번호</label>
-						<input type="text" name="customerNo" id="customerNo" class="form-control ">
+						<input type="text" name="memberId" id="memberId" class="form-control ">
 					</div>
 				</div>
 				<div class="col-sm-3 col-md-3">
 					<div class="input-group">
 						<label for="" class="col-form-label text-end" style="width: 100px; white-space: nowrap; margin-right: 10px;">회사번호</label>
-						<input type="text" name="companyNo" id="companyNo" class="form-control ">
+						<input type="text" name="companyId" id="companyId" class="form-control ">
 					</div>
 				</div>
 				<div class="col-sm-3 col-md-3">
