--- a/ildrio/src/main/resources/templates/pages/back/member/memberInfo/memberInfoView.html
+++ b/ildrio/src/main/resources/templates/pages/back/member/memberInfo/memberInfoView.html
@@ -310,9 +310,9 @@
             		</div>   
       		</div>   
       		<div class="mb-3 row">   
-                	<label for="agencyCompanyNo" class="col-sm-2 col-form-label"> 소속회사번호</label>   
+                	<label for="agencyCompanyId" class="col-sm-2 col-form-label"> 소속회사번호</label>   
             		<div class="col-sm-10">   
-                    <input type="text"  name="agencyCompanyNo" id="agencyCompanyNo" th:value="${rsModel.agencyCompanyNo}"  class="form-control"   maxlength="200" readonly> 
+                    <input type="text"  name="agencyCompanyId" id="agencyCompanyId" th:value="${rsModel.agencyCompanyId}"  class="form-control"   maxlength="200" readonly> 
             		</div>   
       		</div>   
       		<div class="mb-3 row">   
