--- a/ildrio/src/main/resources/templates/layout/fragments/AdminLayoutScript.html
+++ b/ildrio/src/main/resources/templates/layout/fragments/AdminLayoutScript.html
@@ -97,7 +97,7 @@
 		
 
 		function fn_login_check() {
-			//if("[[${ssMap.ssCompanyNo}]]" == ""){
+			//if("[[${ssMap.ssCompanyId}]]" == ""){
 			//	window.location.href="/admin/adminLogin";
 			//}	
 
