--- a/ildrio/src/main/resources/templates/pages/back/company/companyInfo/companyInfoReg.html
+++ b/ildrio/src/main/resources/templates/pages/back/company/companyInfo/companyInfoReg.html
@@ -36,9 +36,9 @@
     		</div>   
     		<div clase="card-body" style="padding: 20px;">   
       		<div class="mb-3 row">   
-                	<label for="companyNo" class="col-sm-2 col-form-label text-end"> 회사번호</label>   
+                	<label for="companyId" class="col-sm-2 col-form-label text-end"> 회사번호</label>   
             		<div class="col-sm-10">   
-                    <input type="text"  name="companyNo" id="companyNo" th:value="${rsModel.companyNo}"  class="form-control"   maxlength="80"> 
+                    <input type="text"  name="companyId" id="companyId" th:value="${rsModel.companyId}"  class="form-control"   maxlength="80"> 
             		</div>   
       		</div>   
       		<div class="mb-3 row">   
@@ -54,9 +54,9 @@
             		</div>   
       		</div>   
       		<div class="mb-3 row">   
-                	<label for="compayName" class="col-sm-2 col-form-label text-end"> 화사명</label>   
+                	<label for="companyName" class="col-sm-2 col-form-label text-end"> 화사명</label>   
             		<div class="col-sm-10">   
-                    <input type="text"  name="compayName" id="compayName" th:value="${rsModel.compayName}"  class="form-control"   maxlength="200"> 
+                    <input type="text"  name="companyName" id="companyName" th:value="${rsModel.companyName}"  class="form-control"   maxlength="200"> 
             		</div>   
       		</div>   
       		<div class="mb-3 row">   
