--- a/ildrio/src/main/resources/templates/pages/back/employment/employmentMember/employmentMemberGrid.html
+++ b/ildrio/src/main/resources/templates/pages/back/employment/employmentMember/employmentMemberGrid.html
@@ -359,7 +359,7 @@
 				src += '    ' + gfn_valueText('requestWage', cfnNull(list[i].requestWage), 'string', 'width:95%;', i) + ''; 
 				src += '  </td>'; 
 				src += '  <td style="width:120px;text-align:center;"> '; 
-				src += '    ' + gfn_valueText('comissionFee', cfnNull(list[i].comissionFee), 'string', 'width:95%;', i) + ''; 
+				src += '    ' + gfn_valueText('commissionFee', cfnNull(list[i].commissionFee), 'string', 'width:95%;', i) + ''; 
 				src += '  </td>'; 
 				src += '  <td style="width:120px;text-align:center;"> '; 
 				src += '    ' + gfn_valueText('payWage', cfnNull(list[i].payWage), 'string', 'width:95%;', i) + ''; 
