--- a/ildrio/src/main/resources/templates/pages/back/job/jobInfo/jobInfoView.html
+++ b/ildrio/src/main/resources/templates/pages/back/job/jobInfo/jobInfoView.html
@@ -36,15 +36,15 @@
 				</div>
 			</div>
 			<div class="mb-3 row">
-				<label for="customerNo" class="col-sm-2 col-form-label"> 거래처번호</label>
+				<label for="memberId" class="col-sm-2 col-form-label"> 거래처번호</label>
 				<div class="col-sm-10">
-					<input type="text" name="customerNo" id="customerNo" th:value="${rsModel.customerNo}" class="form-control" maxlength="200" readonly>
+					<input type="text" name="memberId" id="memberId" th:value="${rsModel.memberId}" class="form-control" maxlength="200" readonly>
 				</div>
 			</div>
 			<div class="mb-3 row">
-				<label for="companyNo" class="col-sm-2 col-form-label"> 회사번호</label>
+				<label for="companyId" class="col-sm-2 col-form-label"> 회사번호</label>
 				<div class="col-sm-10">
-					<input type="text" name="companyNo" id="companyNo" th:value="${rsModel.companyNo}" class="form-control" maxlength="200" readonly>
+					<input type="text" name="companyId" id="companyId" th:value="${rsModel.companyId}" class="form-control" maxlength="200" readonly>
 				</div>
 			</div>
 			<div class="mb-3 row">
@@ -102,9 +102,9 @@
 				</div>
 			</div>
 			<div class="mb-3 row">
-				<label for="mealProvideYn" class="col-sm-2 col-form-label"> 식사제공유형</label>
+				<label for="ealProvideType" class="col-sm-2 col-form-label"> 식사제공유형</label>
 				<div class="col-sm-10">
-					<input type="text" name="mealProvideYn" id="mealProvideYn" th:value="${rsModel.mealProvideYn}" class="form-control" maxlength="4" readonly>
+					<input type="text" name="ealProvideType" id="ealProvideType" th:value="${rsModel.ealProvideType}" class="form-control" maxlength="4" readonly>
 				</div>
 			</div>
 			<div class="mb-3 row">
@@ -214,9 +214,9 @@
 				</div>
 			</div>
 			<div class="mb-3 row">
-				<label for="onstructionCompanyNo" class="col-sm-2 col-form-label"> 건설자번호</label>
+				<label for="onstructionCompanyId" class="col-sm-2 col-form-label"> 건설자번호</label>
 				<div class="col-sm-10">
-					<input type="text" name="onstructionCompanyNo" id="onstructionCompanyNo" th:value="${rsModel.onstructionCompanyNo}" class="form-control" maxlength="200" readonly>
+					<input type="text" name="onstructionCompanyId" id="onstructionCompanyId" th:value="${rsModel.onstructionCompanyId}" class="form-control" maxlength="200" readonly>
 				</div>
 			</div>
 			<div class="mb-3 row">
