--- a/ildrio/src/main/resources/templates/pages/front/job/jobManpower/jobManpowerGrid.html
+++ b/ildrio/src/main/resources/templates/pages/front/job/jobManpower/jobManpowerGrid.html
@@ -319,7 +319,7 @@
 				src += '    ' + gfn_valueText('requestWage', cfnNull(list[i].requestWage), 'money', 'width:95%;', i) + ''; 
 				src += '  </td>'; 
 				src += '  <td style="width:120px;text-align:center;"> '; 
-				src += '    ' + gfn_valueText('comissionFee', cfnNull(list[i].comissionFee), 'money', 'width:95%;', i) + ''; 
+				src += '    ' + gfn_valueText('commissionFee', cfnNull(list[i].commissionFee), 'money', 'width:95%;', i) + ''; 
 				src += '  </td>'; 
 				src += '  <td style="width:120px;text-align:center;"> '; 
 				src += '    ' + gfn_valueText('payWage', cfnNull(list[i].payWage), 'money', 'width:95%;', i) + ''; 
